[gd_scene load_steps=5 format=3 uid="uid://bxy48a4snqhiq"]

[ext_resource type="Script" path="res://menus/level_browser.gd" id="1_ef0ql"]
[ext_resource type="PackedScene" uid="uid://bh77ymvpxm41" path="res://menus/background.tscn" id="2_5m6qe"]
[ext_resource type="LabelSettings" uid="uid://dl2x8x5t28i77" path="res://menus/header1.tres" id="2_i2mh4"]
[ext_resource type="LabelSettings" uid="uid://buwuq1siy1dvb" path="res://menus/menu_button.tres" id="3_kq366"]

[node name="levelBrowser" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ef0ql")

[node name="Background" parent="." instance=ExtResource("2_5m6qe")]
layout_mode = 1

[node name="selectLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 521.0
offset_top = 129.0
offset_right = -535.0
offset_bottom = -490.0
grow_horizontal = 2
grow_vertical = 2
text = "Select a Level"
label_settings = ExtResource("2_i2mh4")
metadata/_edit_use_anchors_ = true

[node name="level1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 110.0
offset_top = 330.0
offset_right = -892.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
text = "      "
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="level1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = ExtResource("3_kq366")
horizontal_alignment = 1
vertical_alignment = 1

[node name="level2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 310.0
offset_top = 330.0
offset_right = -692.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
text = "      "
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="level2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "2"
label_settings = ExtResource("3_kq366")
horizontal_alignment = 1
vertical_alignment = 1

[node name="level3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 510.0
offset_top = 330.0
offset_right = -492.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
text = "      "
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="level3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "3"
label_settings = ExtResource("3_kq366")
horizontal_alignment = 1
vertical_alignment = 1

[node name="level4" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 710.0
offset_top = 330.0
offset_right = -292.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
text = "      "
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="level4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "4"
label_settings = ExtResource("3_kq366")
horizontal_alignment = 1
vertical_alignment = 1

[node name="level5" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 910.0
offset_top = 330.0
offset_right = -92.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 2
text = "      "
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="level5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="goToMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.02691
anchor_bottom = 1.03241
offset_left = 495.0
offset_top = 550.0
offset_right = -507.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2
text = "                                      "
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="goToMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Go to Menu"
label_settings = ExtResource("3_kq366")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="goToMenu" to="." method="_on_go_to_main_menu_pressed"]
